--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -9,33 +9,35 @@
         <!-- 상단 바 -->
             <div class="container">
                 <div class="left">
-                    <a href="#" style="font-size: 24px;" class="menu">
+                    <a style="font-size: 24px;" class="menu">
                         <i class="fa fa-solid fa-bars"></i>
                     </a>
-                    <a href="#" class="youtube-icon">
+                    <a class="youtube-icon">
                         <img src="..\img\logo.png" class="youtube-icon-img">
                     </a>
                 </div>
                 <div class="mid">
                     <input type="serech" placeholder="검색" class="serech">
-                    <a href="#"></a>
-                        <i id="magnifying" class="fa fa-thin fa-magnifying-glass"></i>
-                    </a>
-                    <a class="microphone" href="#" style="font-size: 24px;">
+                    
+                    <button class="magnifying">
+                        <i class="fa fa-thin fa-magnifying-glass"></i>
+                    </button>
+                    
+                    <a class="microphone" style="font-size: 24px;">
                         <i class="fa-solid fa-microphone"></i>
                     </a>
                 </div>
                 <div class="right">
-                    <a href="#" style="font-size: 24px">
+                    <a style="font-size: 24px">
                         <i class="fa fa-thin fa-video"></i>
                     </a>
-                    <a href="#" style="font-size: 24px">
+                    <a style="font-size: 24px">
                         <i class="fa fa-light fa-ellipsis-vertical"></i>
                     </a>
-                    <a href="#" style="font-size: 24px">
+                    <a style="font-size: 24px">
                         <i class="fa fa-thin fa-bell"></i>
                     </a>
-                    <a href="#">
+                    <a>
                         <img src="..\img\profile.png" class="profile">
                     </a>
                 </div>
@@ -43,48 +45,48 @@
         </div>
         <div class="guide">
             <div class="renderer">
-                <a title="홈" href="#" class="guide-main">
+                <a title="홈" class="guide-main">
                     <i class="fa-solid fa-house"></i> 홈
                 </a>
-                <a title="탐색" href="#">
+                <a title="탐색">
                     <i class="fa-regular fa-compass"></i> 탐색
                 </a>
-                <a title="Shorts" href="#">
+                <a title="Shorts">
                     <i class="fa-brands fa-youtube"></i> Shorts
                 </a>
-                <a title="구독" href="#">
+                <a title="구독">
                     <i class="fa-solid fa-clapperboard"></i> 구독
                 </a>
-                <a></a>
-                <a title="보관함" href="#">
+                <a style="cursor: default"></a>
+                <a title="보관함">
                     <i class="fa-solid fa-photo-film"></i> 보관함
                 </a>
-                <a title="시청 기록" href="#" class="shorts-guide-hide">
+                <a title="시청 기록" class="shorts-guide-hide">
                     <i class="fa-solid fa-clock-rotate-left"></i> 시청 기록
                 </a>
-                <a title="내 동영상" href="#" class="shorts-guide-hide">
+                <a title="내 동영상" class="shorts-guide-hide">
                     <i class="fa fa-light fa-square-caret-right"></i> 내 동영상
                 </a>
-                <a title="시청 기록" href="#" class="shorts-guide-hide">
+                <a title="시청 기록" class="shorts-guide-hide">
                     <i class="fa fa-light fa-clock"></i> 시청 기록
                 </a>
-                <a title="내 클립" href="#" class="shorts-guide-hide">
+                <a title="내 클립" class="shorts-guide-hide">
                     <i class="fa fa-light fa-scissors"></i> 내 클립
                 </a>
                 <div class="hide-guide">
-                    <a title="좋아요 표시한 동영상" href="#">
+                    <a title="좋아요 표시한 동영상">
                         <i class="fa fa-thin fa-thumbs-up"></i> 좋아요 표시한 동영상
                     </a>
-                    <a title="재생목록1" href="#">
+                    <a title="재생목록1">
                         <i class="fa fa-light fa-list"></i> 재생목록1
                     </a>
-                    <a title="재생목록2" href="#">
+                    <a title="재생목록2">
                             <i class="fa fa-light fa-list"></i> 재생목록2
                     </a>
-                    <a title="재생목록3" href="#">
+                    <a title="재생목록3">
                         <i class="fa fa-light fa-list"></i> 재생목록3
                     </a>
-                    <a title="더보기" href="#" class="item">
+                    <a title="더보기" class="item">
                         <i class="fa fa-light fa-angle-down"></i> <span>더보기</span>
                     </a>
                 </div>
@@ -93,80 +95,80 @@
                 <span style="font-size:14; color: #606060">
                     구독
                 </span>
-                <a href="#">
+                <a>
                     <img src="..\img\css.png"> <span>CSS</span>
                 </a>
-                <a href="#">
+                <a>
                     <img src="..\img\c.png"> <span>그저 C</span>
                 </a>
-                <a href="#">
+                <a>
                     <img src="..\img\java.png"> <span>자바</span>
                 </a>
-                <a href="#">
+                <a>
                     <img src="..\img\python.png"> <span>파이썬</span>
                 </a>
-                <a href="#">
+                <a>
                     <img src="..\img\typescript.png"> <span>타입스크립트</span>
                 </a>
-                <a href="#">
+                <a>
                     <img src="..\img\javascript.png"> <span>자바스크립트</span>
                 </a>
-                <a href="#">
+                <a>
                     <img src="..\img\html.png"> <span>HTML</span>
                 </a>
-                <a href="#">
+                <a>
                     <i class="fa fa-light fa-angle-down" style="margin:0 24 0 6"></i> 123개 더보기
                 </a>
             </div>
             <div class="youtube-more">
                 <span>YOUTUBE 더보기</span>
-                <a href="#">
+                <a>
                     <i class="fa-brands fa-youtube"></i> YouTube Premium
                 </a>
-                <a href="#">
+                <a>
                     <i class="fa-solid fa-film"></i> 영화
                 </a>
-                <a href="#">
+                <a>
                     <i class="fa-solid fa-gamepad"></i> 게임
                 </a>
-                <a href="#">
+                <a>
                     <i class="fa-solid fa-tower-broadcast"></i> 실시간
                 </a>
-                <a href="#">
+                <a>
                     <i class="fa-regular fa-lightbulb"></i> 학습
                 </a>
-                <a href="#">
+                <a>
                     <i class="fa-solid fa-trophy"></i> 스포츠
                 </a>
-                <a></a>
-                <a href="#">
+                <a style="cursor: default"></a>
+                <a>
                     <i class="fa-solid fa-gear"></i> 설정
                 </a>
-                <a href="#">
+                <a>
                     <i class="fa-solid fa-flag"></i> 신고 기록
                 </a>
-                <a href="#">
+                <a>
                     <i class="fa-regular fa-circle-question"></i> 고객센터
                 </a>
-                <a href="#">
+                <a>
                     <i class="fa-solid fa-circle-exclamation"></i> 의견 보내기
                 </a>
             </div>
         </div>
         <div class="category">
             <a></a>
-            <a href="#" class="category-button-main">전체</a>
-            <a href="#" class="category-button">실시간</a>
-            <a href="#" class="category-button">게임</a>
-            <a href="#" class="category-button">음악</a>
-            <a href="#" class="category-button">믹스</a>
-            <a href="#" class="category-button">스포츠</a>
-            <a href="#" class="category-button">수학</a>
-            <a href="#" class="category-button">뉴스</a>
-            <a href="#" class="category-button">액션 어드벤처 게임</a>
-            <a href="#" class="category-button">요리</a>
-            <a href="#" class="category-button">애니메이션</a>
-            <a href="#" class="category-button">반려동물</a>
+            <a class="category-button-main">전체</a>
+            <a class="category-button">실시간</a>
+            <a class="category-button">게임</a>
+            <a class="category-button">음악</a>
+            <a class="category-button">믹스</a>
+            <a class="category-button">스포츠</a>
+            <a class="category-button">수학</a>
+            <a class="category-button">뉴스</a>
+            <a class="category-button">액션 어드벤처 게임</a>
+            <a class="category-button">요리</a>
+            <a class="category-button">애니메이션</a>
+            <a class="category-button">반려동물</a>
             <a></a>
         </div>
         <div class="account-menu" style="display: none">
@@ -174,64 +176,64 @@
                 <img src="..\img\profile.png" class="profile" style="width: 40;">
                 <div class="account-menu-text">
                     <span class="account-name">유튜브 계정</span>
-                    <a href="#" class="account-control">
+                    <a class="account-control">
                         Google 계정 관리
                     </a>
                 </div>
             </div>
             <div class="account-menu-setting">
                 <div class="account-menu-channel">
-                    <a href="#">
+                    <a>
                         <i class="fa-solid fa-user"></i> 내 채널
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-solid fa-dollar-sign"></i> 구매 항목 및 멤버십
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-solid fa-gear"></i> YouTube스튜디오
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-regular fa-address-card"></i> 계정 전환 <i class="fa fa-light fa-angle-right" id="right-angle"></i>
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-solid fa-arrow-right-from-bracket"></i> 로그아웃
                     </a>
                 </div>
                 <div class="account-menu-other">
-                    <a href="#">
+                    <a>
                         <i class="fa-regular fa-moon"></i> 디자인: 기기 테마 <i class="fa fa-light fa-angle-right" id="right-angle"></i>
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-solid fa-language"></i> 언어: 한국어 <i class="fa fa-light fa-angle-right" id="right-angle"></i>
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-solid fa-globe"></i> 위치: 한국 <i class="fa fa-light fa-angle-right" id="right-angle"></i>
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-solid fa-gear"></i> 설정
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-solid fa-shield-halved"></i> YouTube의 내 데이터
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-regular fa-circle-question"></i> 고객센터
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-solid fa-circle-exclamation"></i>  의견 보내기
                     </a>
-                    <a href="#">
+                    <a>
                         <i class="fa-regular fa-keyboard"></i>단축키
                     </a>
                 </div>
                 <div class="account-menu-limited-mod">
-                    <a href="#">
+                    <a>
                         제한 모드: 사용 안함 <i class="fa fa-light fa-angle-right" id="right-angle"></i>
                     </a>
                 </div>
             </div>
         </div>
         <div class="video-section">
-            <a href="#">
+            <a>
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
@@ -247,7 +249,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a>
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
@@ -263,7 +265,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a>
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
@@ -279,7 +281,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a>
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
@@ -295,7 +297,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a>
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
@@ -311,7 +313,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a>
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
