--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -295,7 +295,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <span class="title">Youtube video!!!</span>
+                            <div class="title">ABCDEFGHIJKLMNOPQRSTUVABCDasdfasdfasdfasdfasdfasdfa12</div>
                             <div>
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
