--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -28,7 +28,7 @@
                     </a>
                 </div>
                 <div class="right">
-                    <a style="font-size: 24px">
+                    <a style="font-size: 24px" class="upload-button">
                         <i class="fa fa-thin fa-video"></i>
                     </a>
                     <a style="font-size: 24px" class="youtube-app-button">
@@ -171,6 +171,20 @@
             <a class="category-button">반려동물</a>
             <a></a>
         </div>
+        <div class="upload-menu" style="display: none">
+            <a class="video-upload">
+                <i class="fa fa-light fa-square-caret-right"></i>
+                <span>
+                    동영상 업로드
+                </span>
+            </a>
+            <a class="streaming-start">
+                <i class="fa-solid fa-tower-broadcast"></i>
+                <span>
+                    실시간 스트리밍 시작
+                </span>
+            </a>
+        </div>
         <div class="youtube-app-menu" style="display: none">
             <a class="youtube-tv">
                 <img src="..\img\youtubeTv.png"> <span>YouTube TV</span>
@@ -295,8 +309,8 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <div class="title">ABCDEFGHIJKLMNOPQRSTUVABCDasdfasdfasdfasdfasdfasdfa12</div>
-                            <div>
+                            <div class="title">This is Youtube Video</div>
+                            <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
                                 조회수 10만회 ⦁ 1시간 전
@@ -312,7 +326,23 @@
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
                             <span class="title">Youtube video!!!</span>
-                            <div>
+                            <div class="video-info">
+                                유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
+                                <br>
+                                조회수 10만회 ⦁ 1시간 전
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a>
+                <div class="video">
+                    <img class="thumbnail" src="..\img\thumbnail.png">
+                    <div class="lore">
+                        <img class="channel" src="..\img\channel.jpg">
+                        <div class="video-lore-text">
+                            <div class="title">loooooooooong title name</div>
+                            <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
                                 조회수 10만회 ⦁ 1시간 전
@@ -328,7 +358,7 @@
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
                             <span class="title">Youtube video!!!</span>
-                            <div>
+                            <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
                                 조회수 10만회 ⦁ 1시간 전
@@ -344,7 +374,7 @@
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
                             <span class="title">Youtube video!!!</span>
-                            <div>
+                            <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
                                 조회수 10만회 ⦁ 1시간 전
@@ -360,23 +390,7 @@
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
                             <span class="title">Youtube video!!!</span>
-                            <div>
-                                유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
-                                <br>
-                                조회수 10만회 ⦁ 1시간 전
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a>
-                <div class="video">
-                    <img class="thumbnail" src="..\img\thumbnail.png">
-                    <div class="lore">
-                        <img class="channel" src="..\img\channel.jpg">
-                        <div class="video-lore-text">
-                            <span class="title">Youtube video!!!</span>
-                            <div>
+                            <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
                                 조회수 10만회 ⦁ 1시간 전
