--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -206,7 +206,7 @@
                     <i class="fa-solid fa-gear"></i>
                 </a>
             </div>
-            <div class="notification-menu-bar">
+            <div class="notification-video-section">
                 <div class="notification-vide">
                     <a class="notification-channel">
                         <img src="..\img\channel.jpg">
@@ -232,7 +232,135 @@
                             알림영상2
                         </a>
                         <a class="notification-vide-info-time">
-                            2시간 전
+                            1시간 전
+                        </a>
+                    </div>
+                    <a class="notification-vide-thumbnail">
+                        <img src="..\img\thumbnail.png">
+                    </a>
+                </div>
+                <div class="notification-vide">
+                    <a class="notification-channel">
+                        <img src="..\img\channel.jpg">
+                    </a>
+                    <div class="notification-vide-info">
+                        <a class="notification-vide-info-title">
+                            알림영상3
+                        </a>
+                        <a class="notification-vide-info-time">
+                            1시간 전
+                        </a>
+                    </div>
+                    <a class="notification-vide-thumbnail">
+                        <img src="..\img\thumbnail.png">
+                    </a>
+                </div>
+                <div class="notification-vide">
+                    <a class="notification-channel">
+                        <img src="..\img\channel.jpg">
+                    </a>
+                    <div class="notification-vide-info">
+                        <a class="notification-vide-info-title">
+                            알림영상4
+                        </a>
+                        <a class="notification-vide-info-time">
+                            1시간 전
+                        </a>
+                    </div>
+                    <a class="notification-vide-thumbnail">
+                        <img src="..\img\thumbnail.png">
+                    </a>
+                </div>
+                <div class="notification-vide">
+                    <a class="notification-channel">
+                        <img src="..\img\channel.jpg">
+                    </a>
+                    <div class="notification-vide-info">
+                        <a class="notification-vide-info-title">
+                            알림영상5
+                        </a>
+                        <a class="notification-vide-info-time">
+                            1시간 전
+                        </a>
+                    </div>
+                    <a class="notification-vide-thumbnail">
+                        <img src="..\img\thumbnail.png">
+                    </a>
+                </div>
+                <div class="notification-vide">
+                    <a class="notification-channel">
+                        <img src="..\img\channel.jpg">
+                    </a>
+                    <div class="notification-vide-info">
+                        <a class="notification-vide-info-title">
+                            알림영상6
+                        </a>
+                        <a class="notification-vide-info-time">
+                            1시간 전
+                        </a>
+                    </div>
+                    <a class="notification-vide-thumbnail">
+                        <img src="..\img\thumbnail.png">
+                    </a>
+                </div>
+                <div class="notification-vide">
+                    <a class="notification-channel">
+                        <img src="..\img\channel.jpg">
+                    </a>
+                    <div class="notification-vide-info">
+                        <a class="notification-vide-info-title">
+                            알림영상7
+                        </a>
+                        <a class="notification-vide-info-time">
+                            1시간 전
+                        </a>
+                    </div>
+                    <a class="notification-vide-thumbnail">
+                        <img src="..\img\thumbnail.png">
+                    </a>
+                </div>
+                <div class="notification-vide">
+                    <a class="notification-channel">
+                        <img src="..\img\channel.jpg">
+                    </a>
+                    <div class="notification-vide-info">
+                        <a class="notification-vide-info-title">
+                            알림영상8
+                        </a>
+                        <a class="notification-vide-info-time">
+                            1시간 전
+                        </a>
+                    </div>
+                    <a class="notification-vide-thumbnail">
+                        <img src="..\img\thumbnail.png">
+                    </a>
+                </div>
+                <div class="notification-vide">
+                    <a class="notification-channel">
+                        <img src="..\img\channel.jpg">
+                    </a>
+                    <div class="notification-vide-info">
+                        <a class="notification-vide-info-title">
+                            알림영상9
+                        </a>
+                        <a class="notification-vide-info-time">
+                            1시간 전
+                        </a>
+                    </div>
+                    <a class="notification-vide-thumbnail">
+                        <img src="..\img\thumbnail.png">
+                    </a>
+                </div>
+                <div class="notification-vide">
+                    <a class="notification-channel">
+                        <img src="..\img\channel.jpg">
+                    </a>
+                    <div class="notification-vide-info">
+                        <a class="notification-vide-info-title">
+                            알림영상10
+                        </a>
+                        <a class="notification-vide-info-time">
+                            1시간 전
                         </a>
                     </div>
                     <a class="notification-vide-thumbnail">
@@ -341,7 +469,7 @@
                     <div class="lore">
                         <img class="channel" src="..\img\channel.jpg">
                         <div class="video-lore-text">
-                            <div class="title">loooooooooong title name</div>
+                            <div class="title">looooooong title! 가나다라마바사아자차카타파하 1234567890 ABCDEFGHIJKLMNOPQRSTUVWXYZ</div>
                             <div class="video-info">
                                 유튜브 채널 <i style="font-size: 14px" class="fa-solid fa-circle-check"></i>
                                 <br>
