--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <li><a href="GlowingButton.html">Glowing</br>Button</a></li>
             <li><a href="wave.html">Wave</a></li>
             <li><a href="sns\youtube.html">Youtube</a></li>
-            <li><a href="#">개발중</a></li>
+            <li><a href="element\elements.html">elements</a></li>
             <li><a href="#">개발중</a></li>
             <li><a href="#">개발중</a></li>
         </ul>
