--- a/sns/youtube.html
+++ b/sns/youtube.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <title>YouTube</title>
+        <link rel="shortcut icon" href="..\img\youtube.ico">
         <link href="style.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://kit.fontawesome.com/760c40f62e.js" crossorigin="anonymous"></script>
@@ -431,7 +433,7 @@
             </div>
         </div>
         <div class="video-section">
-            <a>
+            <a href="video.html">
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
@@ -447,7 +449,7 @@
                     </div>
                 </div>
             </a>
-            <a>
+            <a href="video.html">
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
@@ -463,7 +465,7 @@
                     </div>
                 </div>
             </a>
-            <a>
+            <a href="video.html">
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
@@ -479,7 +481,7 @@
                     </div>
                 </div>
             </a>
-            <a>
+            <a href="video.html">
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
@@ -495,7 +497,7 @@
                     </div>
                 </div>
             </a>
-            <a>
+            <a href="video.html">
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
@@ -511,7 +513,7 @@
                     </div>
                 </div>
             </a>
-            <a>
+            <a href="video.html">
                 <div class="video">
                     <img class="thumbnail" src="..\img\thumbnail.png">
                     <div class="lore">
