--- a/sns/video.html
+++ b/sns/video.html
@@ -51,60 +51,60 @@
                     <video src="..\sns\video.mp4" controls></video>
                 </div>
                 <div class="info1">
-                    <div class="tag">
-                        #태그
-                    </div>
                     <div class="title">
                         제목
                     </div>
                     <div class="viewButton">
                         <div class="view">
-                            조회수 100,000회
+                            조회수 100,000회 ⦁ <span class="date">none</span>
                         </div>
                         <div class="button">
                             <a>
-                                <i class="fa-regular fa-thumbs-up"></i>좋아요
+                                <i class="fa-regular fa-thumbs-up"></i> <span>1.5천</span>
                             </a>
                             <a>
-                                <i class="fa-regular fa-thumbs-down"></i>싫어요
+                                <i class="fa-regular fa-thumbs-down"></i> <span>싫어요</span>
                             </a>
                             <a>
-                                <i class="fa-solid fa-share"></i>공유
+                                <i class="fa-solid fa-share"></i> <span>공유</span>
                             </a>
                             <a>
-                                <i class="fa-solid fa-arrow-down"></i>오프라인 저장
+                                <i class="fa-solid fa-arrow-down"></i> <span>오프라인 저장</span>
                             </a>
                             <a>
-                                <i class="fa-solid fa-scissors"></i>클립
+                                <i class="fa-solid fa-scissors"></i> <span>클립</span>
                             </a>
                             <a>
-                                <i class="fa-solid fa-floppy-disk"></i>저장
+                                <i class="fa-solid fa-floppy-disk"></i> <span>저장</span>
                             </a>
                             <a>
-                                <i class="fa fa-light fa-circle-info"></i>설명
+                                <i class="fa fa-light fa-circle-info"></i> <span>설명</span>
+                            </a>
+                            <a>
+                                <i class="fa-solid fa-ellipsis"></i>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="info2">
                     <div class="channel">
-                        <div>
+                        <a>
                             <img src="..\img\channel.jpg">
-                        </div>
+                        </a>
                         <div class="text">
-                            <div>
-                                유튜브 채널
-                            </div>
-                            <div>
+                            <a class="name">
+                                유튜브 채널 <i style="font-size: 14px; color: #606060" class="fa-solid fa-circle-check"></i>
+                            </a>
+                            <div class="subscriber">
                                 구독자 100만명
                             </div>
                         </div>
-                        <div>
+                        <a class="subButton">
                             구독중
-                        </div>
-                        <div>
-                            icon
-                        </div>
+                        </a>
+                        <a class="notice">
+                            <i class="fa-regular fa-bell"></i>
+                        </a>
                     </div>
                     <div class="lore">
                         설명란
@@ -115,6 +115,6 @@
 
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="video.js"></script>
     </body>
 </html>
